--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,5 +1,5 @@
-book_filename: "bookdown-demo"
+book_filename: "r-principiantes"
 language:
   ui:
-    chapter_name: "Chapter "
+    chapter_name: "Capítulo "
 delete_merged_file: true
